--- a/Marlin/Views/Window/MessagePage.xaml
+++ b/Marlin/Views/Window/MessagePage.xaml
@@ -2,10 +2,10 @@
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:vm="clr-namespace:Marlin.ViewModels.Message"
+      xmlns:vm="clr-namespace:Marlin.ViewModels.Window"
       xmlns:local="clr-namespace:Marlin.Windows"
-      Width="300"
-      Height="200"
+      MaxWidth="500"
+      MaxHeight="400"
       Foreground="{Binding Path=FontColor}">
     <Page.DataContext>
         <vm:MessagePageViewModel/>
