--- a/Marlin/Views/Main/SettingsPage.xaml
+++ b/Marlin/Views/Main/SettingsPage.xaml
@@ -41,7 +41,7 @@
                     <Border Grid.Row="0"
                             Margin="10,0,10,5"
                             CornerRadius="25"
-                            BorderBrush="{Binding Path=PageColor}"
+                            BorderBrush="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
                             BorderThickness="2">
                         <Grid Margin="15,10">
                             <Grid.RowDefinitions>
@@ -52,7 +52,7 @@
                             <TextBlock Grid.Row="0"
                                        FontSize="20"
                                        FontWeight="Bold"
-                                       Foreground="{Binding Path=PageColor}"
+                                       Foreground="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
                                        Text="Программа"/>
 
                             <Grid Grid.Row="1">
@@ -73,7 +73,7 @@
                                                    Margin="10,13"
                                                    FontSize="15"
                                                    FontWeight="Bold"
-                                                   Foreground="{Binding Path=PageColor}"
+                                                   Foreground="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
                                                    Text="Оформление:"/>
 
                                         <Grid Grid.Column="1">
@@ -160,7 +160,7 @@
                                         <TextBlock Grid.Column="0"
                                                    Margin="10,13"
                                                    FontSize="15"
-                                                   Foreground="{Binding Path=PageColor}"
+                                                   Foreground="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
                                                    FontWeight="Bold"
                                                    Text="Озвучивание:"/>
 
@@ -187,7 +187,7 @@
                                                 <ComboBox Grid.Column="1"
                                                           FontSize="15"
                                                           SelectedValue="{Binding Path=Speed,UpdateSourceTrigger=PropertyChanged}"
-                                                          ItemsSource="{Binding Path=Speeds}"
+                                                          ItemsSource="{Binding Path=Speeds,UpdateSourceTrigger=PropertyChanged}"
                                                           HorizontalContentAlignment="Center"/>
                                             </Grid>
 
@@ -220,7 +220,7 @@
                     <Border Grid.Row="1"
                             Margin="10,5,10,10"
                             CornerRadius="20"
-                            BorderBrush="{Binding Path=PageColor}"
+                            BorderBrush="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
                             BorderThickness="2">
                         <Grid Margin="15,10">
                             <Grid.RowDefinitions>
@@ -230,7 +230,7 @@
                             <TextBlock Grid.Row="0"
                                        FontSize="20"
                                        FontWeight="Bold"
-                                       Foreground="{Binding Path=PageColor}"
+                                       Foreground="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
                                        Text="Администрирование"/>
 
                             <Grid Grid.Row="1">
@@ -251,7 +251,7 @@
                                                    Margin="10,13"
                                                    FontSize="15"
                                                    FontWeight="Bold"
-                                                   Foreground="{Binding Path=PageColor}"
+                                                   Foreground="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
                                                    Text="Администратор:"/>
 
                                         <Grid Grid.Column="1">
@@ -320,7 +320,7 @@
                                                 <ComboBox Grid.Column="1"
                                                           FontSize="15"
                                                           SelectedValue="{Binding Path=NewGender,UpdateSourceTrigger=PropertyChanged}"
-                                                          ItemsSource="{Binding Path=Genders}"
+                                                          ItemsSource="{Binding Path=Genders,UpdateSourceTrigger=PropertyChanged}"
                                                           HorizontalContentAlignment="Center"/>
                                             </Grid>
                                         </Grid>
@@ -339,7 +339,7 @@
                                                    Margin="10,13"
                                                    FontSize="15"
                                                    FontWeight="Bold"
-                                                   Foreground="{Binding Path=PageColor}"
+                                                   Foreground="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
                                                    Text="Данные:"/>
 
                                         <Grid Grid.Column="1">
@@ -364,7 +364,7 @@
                                                 <TextBox Grid.Column="1"
                                                          FontSize="15"
                                                          MinWidth="100"
-                                                         Text="{Binding Path=NewMainFolder}"
+                                                         Text="{Binding Path=NewMainFolder,UpdateSourceTrigger=PropertyChanged}"
                                                          VerticalAlignment="Center"
                                                          HorizontalContentAlignment="Center"/>
                                             </Grid>
@@ -391,8 +391,8 @@
                     FontWeight="Bold"
                     BorderThickness="0"
                     BorderBrush="Transparent"
-                    Foreground="{Binding Path=BackgroundColor}"
-                    Background="{Binding Path=PageColor}"
+                    Foreground="{Binding Path=BackgroundColor,UpdateSourceTrigger=PropertyChanged}"
+                    Background="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
                     Click="Button_Click_1"/>
 
             <Button Grid.Column="1"
@@ -402,8 +402,8 @@
                     Margin="5,10,10,10" 
                     BorderThickness="0"
                     BorderBrush="Transparent"
-                    Foreground="{Binding Path=BackgroundColor}"
-                    Background="{Binding Path=PageColor}"
+                    Foreground="{Binding Path=BackgroundColor,UpdateSourceTrigger=PropertyChanged}"
+                    Background="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
                     Click="Button_Click"/>
         </Grid>
     </Grid>
