--- a/Marlin/Views/Main/SettingsPage.xaml
+++ b/Marlin/Views/Main/SettingsPage.xaml
@@ -13,7 +13,7 @@
     <Page.DataContext>
         <vm:SettingsPageViewModel/>
     </Page.DataContext>
-    <Grid Background="{Binding Path=BackgroundColor,UpdateSourceTrigger=PropertyChanged}">
+    <Grid Background="{Binding Path=ExternalBackgroundColor,UpdateSourceTrigger=PropertyChanged}">
         <Grid.RowDefinitions>
             <RowDefinition Height="50px"/>
             <RowDefinition Height="*"/>
@@ -41,6 +41,7 @@
                     <Border Grid.Row="0"
                             Margin="10,0,10,5"
                             CornerRadius="25"
+                            Background="{Binding Path=InternalBackgroundColor,UpdateSourceTrigger=PropertyChanged}"
                             BorderBrush="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
                             BorderThickness="2">
                         <Grid Margin="15,10">
@@ -81,6 +82,7 @@
                                                 <RowDefinition Height="*"/>
                                                 <RowDefinition Height="*"/>
                                                 <RowDefinition Height="*"/>
+                                                <RowDefinition Height="*"/>
                                             </Grid.RowDefinitions>
 
                                             <Grid Grid.Row="0"
@@ -95,16 +97,37 @@
                                                            Margin="0,0,15,0"
                                                            VerticalAlignment="Center"
                                                            HorizontalAlignment="Center"
-                                                           Text="Цвет фона:"/>
+                                                           Text="Цвет внешнего фона:"/>
 
                                                 <TextBox Grid.Column="1"
                                                          MaxLength="9"
                                                          FontSize="15"
-                                                         Text="{Binding Path=BackgroundColor,UpdateSourceTrigger=PropertyChanged}"
+                                                         Text="{Binding Path=ExternalBackgroundColor,UpdateSourceTrigger=PropertyChanged}"
                                                          HorizontalContentAlignment="Center"/>
                                             </Grid>
 
                                             <Grid Grid.Row="1"
+                                                  Margin="0,10">
+                                                <Grid.ColumnDefinitions>
+                                                    <ColumnDefinition Width="auto"/>
+                                                    <ColumnDefinition Width="100"/>
+                                                </Grid.ColumnDefinitions>
+
+                                                <TextBlock Grid.Column="0"
+                                                           FontSize="15"
+                                                           Margin="0,0,15,0"
+                                                           VerticalAlignment="Center"
+                                                           HorizontalAlignment="Center"
+                                                           Text="Цвет внутреннего фона:"/>
+
+                                                <TextBox Grid.Column="1"
+                                                         MaxLength="9"
+                                                         FontSize="15"
+                                                         Text="{Binding Path=InternalBackgroundColor,UpdateSourceTrigger=PropertyChanged}"
+                                                         HorizontalContentAlignment="Center"/>
+                                            </Grid>
+
+                                            <Grid Grid.Row="2"
                                                   Margin="0,10">
                                                 <Grid.ColumnDefinitions>
                                                     <ColumnDefinition Width="auto"/>
@@ -125,7 +148,7 @@
                                                          HorizontalContentAlignment="Center"/>
                                             </Grid>
 
-                                            <Grid Grid.Row="2"
+                                            <Grid Grid.Row="3"
                                                   Margin="0,10">
                                                 <Grid.ColumnDefinitions>
                                                     <ColumnDefinition Width="auto"/>
@@ -218,6 +241,7 @@
                     </Border>
                     
                     <Border Grid.Row="1"
+                            Background="{Binding Path=InternalBackgroundColor,UpdateSourceTrigger=PropertyChanged}"
                             Margin="10,5,10,10"
                             CornerRadius="20"
                             BorderBrush="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
@@ -391,7 +415,7 @@
                     FontWeight="Bold"
                     BorderThickness="0"
                     BorderBrush="Transparent"
-                    Foreground="{Binding Path=BackgroundColor,UpdateSourceTrigger=PropertyChanged}"
+                    Foreground="{Binding Path=ExternalBackgroundColor,UpdateSourceTrigger=PropertyChanged}"
                     Background="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
                     Click="Button_Click_1"/>
 
@@ -402,7 +426,7 @@
                     Margin="5,10,10,10" 
                     BorderThickness="0"
                     BorderBrush="Transparent"
-                    Foreground="{Binding Path=BackgroundColor,UpdateSourceTrigger=PropertyChanged}"
+                    Foreground="{Binding Path=ExternalBackgroundColor,UpdateSourceTrigger=PropertyChanged}"
                     Background="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
                     Click="Button_Click"/>
         </Grid>
