--- a/Marlin/Views/Main/SettingsPage.xaml
+++ b/Marlin/Views/Main/SettingsPage.xaml
@@ -8,6 +8,7 @@
       mc:Ignorable="d" 
       d:Height="450" 
       d:Width="800"
+      ShowsNavigationUI="False"
       Foreground="{Binding Path=FontColor}"
       Title="SettingsPage">
     <Page.DataContext>
@@ -261,6 +262,7 @@
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="*"/>
                                     <RowDefinition Height="*"/>
+                                    <RowDefinition Height="*"/>
                                 </Grid.RowDefinitions>
 
                                 <Grid Grid.Row="0"
@@ -391,6 +393,49 @@
                                                          Text="{Binding Path=NewMainFolder,UpdateSourceTrigger=PropertyChanged}"
                                                          VerticalAlignment="Center"
                                                          HorizontalContentAlignment="Center"/>
+                                            </Grid>
+                                        </Grid>
+                                    </Grid>
+                                </Grid>
+
+                                <Grid Grid.Row="2"
+                                      Margin="0,10">
+                                    <Grid>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="auto"/>
+                                            <ColumnDefinition Width="auto"/>
+                                        </Grid.ColumnDefinitions>
+
+                                        <TextBlock Grid.Column="0"
+                                                   Margin="10,13"
+                                                   FontSize="15"
+                                                   FontWeight="Bold"
+                                                   Foreground="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
+                                                   Text="Система:"/>
+
+                                        <Grid Grid.Column="1">
+                                            <Grid.RowDefinitions>
+                                                <RowDefinition Height="*"/>
+                                            </Grid.RowDefinitions>
+
+                                            <Grid Grid.Row="0"
+                                                  Margin="0,0">
+                                                <Grid.ColumnDefinitions>
+                                                    <ColumnDefinition Width="auto"/>
+                                                    <ColumnDefinition Width="auto"/>
+                                                </Grid.ColumnDefinitions>
+
+                                                <TextBlock Grid.Column="0"
+                                                           FontSize="15"
+                                                           Margin="0,0,15,0"
+                                                           VerticalAlignment="Center"
+                                                           HorizontalAlignment="Center"
+                                                           Text="Автозапуск:"/>
+
+                                                <CheckBox Grid.Column="1"
+                                                          FontSize="15"
+                                                          IsChecked="{Binding Path=Аutorun,UpdateSourceTrigger=PropertyChanged}"
+                                                          HorizontalContentAlignment="Center"/>
                                             </Grid>
                                         </Grid>
                                     </Grid>
