--- a/Marlin/Views/Window/RegistrationPage.xaml
+++ b/Marlin/Views/Window/RegistrationPage.xaml
@@ -200,7 +200,7 @@
 
                     <CheckBox Grid.Column="1"
                               Margin="5,0,0,0"
-                              IsChecked="True"/>
+                              IsChecked="{Binding Path=Аutorun}"/>
                 </Grid>
             </Grid>
         </Border>
